fixed the typo that was making this not work. FML

--- a/styles.css
+++ b/styles.css
@@ -1,9 +1,9 @@
-header{
+header {
     background-color:grey;
-    height:100px;
-    color: aliceblue;
+    height:10%;
 }
-#abbreviatedInitials{
-  color: black;
+.abbreviatedInitials {
+  color: white;
   text-transform: capitalize;
+  display: inline-block;
 }
