added placeholder image to sidebar

--- a/styles.css
+++ b/styles.css
@@ -17,10 +17,16 @@ header {
 
 .Sidebar{
   border: 5px solid seagreen;
+  border-radius: 15px;
+  display: inline-block;
+  width: 25%;
 }
 
 .resumeContent{
   border:5px solid blue;
+  border-radius: 15px;
+  display: inline-block;
+  width: 70%;
 }
 
 .aboutMe{
