--- a/styles.css
+++ b/styles.css
@@ -2,10 +2,13 @@ body{
   font-family: 'Montserrat', sans-serif;
 }
 
-
+.Heading{
+  display: flex;
+}
 header {
     background-color:grey;
-    height:10%;
+    display: flex;
+    
 }
 .abbreviatedInitials {
   color: white;
@@ -25,6 +28,15 @@ header {
   border-radius: 15px;
   width: 25%;
   display: inline-flex;
+  flex-direction: column;
+  padding:0.5rem; 
+}
+@media screen and (max-width:600px) {
+  .Sidebar{display: none;}
+}
+
+.Photo{
+  display: flex;
 }
 
 .resumeContent{
@@ -33,6 +45,7 @@ header {
   display: inline-flex;
   flex-direction: column;
   width: 70%;
+  padding: 0.5rem;
 }
 
 .aboutMe{
