formatting for blog, changed docx CV to pdf CV

--- a/BlogStyle.css
+++ b/BlogStyle.css
@@ -6,7 +6,7 @@ body{
   .BlogTitle{
       display: flex;
       flex-direction: row;
-
+        background-color: blanchedalmond;    
   }
 
   .blogPosts{
