So the blog is basically done - 5 posts, 5 images all re sized and re ordered with flex and given *colorful* borders. not bad for 2.5 hours really, although I could easily do better with more time, or If I had started a blog several years ago. I will try to get it into a more presentable state, but I know I don't have the time and there are more important things to do. One virtue of it's simplicity is that it just works on pretty much all devices

--- a/BlogStyle.css
+++ b/BlogStyle.css
@@ -10,7 +10,28 @@ body{
   }
 
   .blogPosts{
-    display: inline-flex;
+    width:100%;
+    display: flex;
     flex-direction: column-reverse;
     padding: auto;
+    justify-content: left;
+    border: green 5px solid;
   }
+
+  .ABlogPost{
+      display: flex;
+      flex-direction: row;
+      flex-grow: 1;
+      border: rgb(255, 0, 0) 5px solid;
+      justify-content: space-evenly;
+  }
+
+  .PostContent{
+      padding: auto;
+      border: springgreen 5px solid;
+  }
+
+  .PostImage{
+      max-width: 100%;
+      margin:1rem
+    }
