--- a/BlogStyle.css
+++ b/BlogStyle.css
@@ -1,37 +1,46 @@
 body{
-    font-family: 'Montserrat', sans-serif;
-   
+    font-family: 'Montserrat', sans-serif; /*same google font as the rest, possibly should be comic sans*/
+    padding: auto;
+    margin: 1rem;
   }
 
   .BlogTitle{
       display: flex;
       flex-direction: row;
-        background-color: blanchedalmond;    
+        background-color: blanchedalmond;
+        margin: 1rem; 
+        padding: 1rem;   
   }
 
-  .blogPosts{
+  .blogPosts{ /*I'm undecided on whether the column-reverse is the best choice here. I think it technically satisfies the requirements, and it would work if the blog was built organically over time*/
     width:100%;
     display: flex;
-    flex-direction: column-reverse;
+    flex-direction: column-reverse; /*So this is the simplest way to reorder the posts there is, but as long as you just add to the bottom of the HTML file it will always work*/
     padding: auto;
     justify-content: left;
-    border: green 5px solid;
+ 
   }
 
-  .ABlogPost{
+  .ABlogPost{/*about halfway through I realised that numbering the blog posts was just creating a massive ammount of copy and paste code, so I rewrote the variables in the HTML file to reflect what Needed to be displayed*/
       display: flex;
       flex-direction: row;
-      flex-grow: 1;
-      border: rgb(255, 0, 0) 5px solid;
+     
+      border: red 5px solid; /*if I'm committng the 90s aesthetic, I'm committing all the way*/
       justify-content: space-evenly;
   }
 
   .PostContent{
       padding: auto;
-      border: springgreen 5px solid;
+      
   }
 
   .PostImage{
       max-width: 100%;
-      margin:1rem
+      margin:1rem;
+      padding: auto;
+    }
+
+    .postTitle{
+       margin-left: 1rem;
+        padding: auto;
     }
