changed the navigation link classes to make them jump individually

--- a/styles.css
+++ b/styles.css
@@ -69,7 +69,7 @@ body{
     .NavigationLinks{
       list-style-type: none;
     }
-      .NavigationLinks:hover{
+      .navigationLink:hover{/*makes the links jump. cause why not*/
         transform: translateX(-1rem);
       }
 
