added titles to portfolio and cv page. changed placeholder colors in css sheet to hexadecimal

--- a/styles.css
+++ b/styles.css
@@ -138,6 +138,10 @@ body{
         }
 
   .resumeContent{
-    color: aliceblue;
+    color: #e8eaff;
  
+  }
+
+  .PortfolioProjects{
+    color: #e8eaff;
   }
